project/test/syntax/good/Good66.ty
singleton class Action {

    actions: {
        action: () -> Void = {
            var newVariable: Int = 3;
            local#newVariable(4)
            Actions.something.something.somethingElse#doSomething(newVariable)
        }
    }
}
