project/test/syntax/bad/Bad45.ty
singleton class FunctionsAndActions { 
    
    functions: {
        someFunction: (f: get (x: Int) -> Int, g: get (x: Int) -> Bool) -> get (x: Int) -> Int = {
            if (g.get(5)) then {
                get (x: Int) -> 3
            } else {
                get (x: Int) -> 5 * x
            }
        }
    }
    
    actions: {
        someAction: (f: do (x: Int, y: Int) -> Void, g: get (x: Int) -> Bool) ->  (x: Int) -> Int = {
            if (g.get(5)) {
                System#printLine("this case")
                System#something
                get (x: Int) -> 5 * x
            } else {
                get (x: Int) -> 7 * x
            }
        }
    }
}
